	General:
	* Our bundled libgadu should now build on HP-UX.

	Pidgin:
	* Sort by Status no longer causes buddies to move around when you
	  click them.
	* Fix embedding in the system tray on older GTK+ releases (such as on
	  CentOS 5.5 and older Fedora).

	AIM:
	* Fix a bug where some buddies from your buddy list might not show up.
	  Affected non-English ICQ users the most. (#13386)

	XMPP:
	* Fix building on platforms with an older glib (inadvertantly broken in
	  2.7.10).  (#13329)
	* Don't treat the on-join status storms as 'new arrivals'.  (#a14527)
	  (Thijs Alkemade)

version 2.7.10 (02/06/2011):
	General:
	* Force video sources to all have the same capabilities.  This reduces the
	  number of times video must be scaled down, saving CPU time. (Jakub Adam)
	  (half of #13095)
	* Starting multiple video calls and ending one no longer causes the other
	  calls to stop sending audio and video. (Jakub Adam) (#12758, #13237)
	* Perl bindings now respect LDFLAGS. (Peter Volkov, Markos Chandras)
	  (#12638)
	* Added AddTrust External Root CA.  (#11554)
	* Resolve some issues validating X.509 certificates signed off the CAcert
	  Class 3 intermediate cert when using the GnuTLS SSL/TLS plugin.

	Gadu-Gadu:
	* Don't drop whole messages when text is colored. (Jan Zachorowski)
	  (#13259)

	Groupwise:
	* Don't show two windows when using "Get Info" on a buddy. (Gabriel Burt;
	  Novell, Inc.) (#13108)

	IRC:
	* Don't send ISON messages longer than 512 bytes. (Jeffrey Honig) (#9692)

	libpurple:
	* Stop sending audio when placing a call on hold. (Jakub Adam) (#13032)
	* Stop translating gpointers to ints in the dbus API.  This removes
	  functions from the dbus API.  (The openSUSE Project) (#12507)
	* Fix D-Bus introspection calls that omit the interface parameter.  (Tom
	  Samstag) (#13073)
	* Fixed bugs in purple_str_to_time() that caused the most recent 'make
	  check' failures.  (Nader Morshed) (#13131)